CardDetails on Mobile FIX

--- a/src/pages/homePage/ui/HomePage.module.scss
+++ b/src/pages/homePage/ui/HomePage.module.scss
@@ -14,6 +14,10 @@
   flex-direction: column;
 }
 
+.hide {
+  display: none !important;
+}
+
 .flight {
   margin-left: $space-6;
   display: flex;
